nixrs-derive-tests/tests/ui/deserialize_from_missing.stderr
error[E0277]: the trait bound `Test: std::convert::From<u64>` is not satisfied
 --> tests/ui/deserialize_from_missing.rs
  |
  | #[nix(from = "u64")]
  |              ^^^^^ the trait `std::convert::From<u64>` is not implemented for `Test`
